# hackaton_backend

./: .README  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 111a432ca7fa_create_a_score_table_and_link_it_to_.py  5b155a609845_lets_go.py  98ac0f5dc87b_first_migration.py  d1e4a491e2ae_second_migration.py
src/app/endpoints/: commision_endpoints.py  generated_kwc_endpoints.py  payement_endpoints.py  projects_endpoints.py  score_endpoints.py  team_endpoints.py  team_memebers_endpoints.py  user_endpoints.py
src/app/models/: __init__.py  commissions.py  generated_kwc.py  payment.py  projects.py  score.py  team.py  team_members.py  user.py
src/app/repositories/: commission_repository.py  generated_kwc_repository.py  payment_repository.py  project_repository.py  score_repository.py  team_member_repository.py  team_repository.py  user_repository.py
src/app/schemas/: commission_schema.py  generated_kwc_schema.py  payment_schema.py  projects_schema.py  score_schema.py  team_members_schema.py  team_schema.py  user_schema.py
src/app/services/: commission_service.py  generated_kwc_service.py  payment_service.py  project_service.py  score_service.py  team_member_service.py  team_service.py  user_service.py
src/config/db/: config.py  database.py
src/config/sécurite/: securite.py
src/config/sécurité/: securité.py
